[package]
name = "solana-bpf-flavotes"
version = "0.0.1"
description = "Program to vote on icecream flavours"
license = "Apache-2.0"
edition = "2018"

[features]
entrypoint = []

[dependencies]
solana-program = "1.6.1"
byteorder = "1.3"
remove_dir_all = "=0.7.0"
num-traits = "0.2"
num-derive = "0.3"
thiserror = "1.0"
borsh = "0.9.1"
borsh-derive = "0.9.1"

[dev-dependencies]
rand = { version = "0.7.0"}
assert_matches = "1.4.0"
base64 = "0.13.0"
tokio = { version = "0.3", features = ["macros"]}
solana-program-test = "=1.6.1"
solana-sdk = "=1.6.1"

[lib]
name = "solana_bpf_flavotes"
crate-type = ["cdylib", "lib"]

